feat(html): update index.html with enhanced metadata and structured data for SEO

--- a/index.html
+++ b/index.html
@@ -1,10 +1,51 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/isotipo-color.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vite-app</title>
+    <title>Joseph Infante | Software Developer</title>
+    <meta
+      name="description"
+      content="Portfolio of Joseph Infante, Software Developer focused on APIs, internal platforms, performance, and maintainable systems."
+    />
+    <meta
+      name="keywords"
+      content="Joseph Infante, software developer, portfolio, APIs, internal platforms, web development"
+    />
+    <meta name="author" content="Joseph Infante" />
+    <meta name="robots" content="index, follow" />
+    <meta name="theme-color" content="#0b1020" />
+    <link rel="canonical" href="https://josephi.dev/" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Joseph Infante Portfolio" />
+    <meta property="og:title" content="Joseph Infante | Software Developer" />
+    <meta
+      property="og:description"
+      content="I design and build software products, from APIs to internal platforms."
+    />
+    <meta property="og:url" content="https://josephi.dev/" />
+    <meta property="og:image" content="https://josephi.dev/isotipo-color.svg" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Joseph Infante | Software Developer" />
+    <meta
+      name="twitter:description"
+      content="Portfolio of Joseph Infante, Software Developer focused on clear architecture and maintainable systems."
+    />
+    <meta name="twitter:image" content="https://josephi.dev/isotipo-color.svg" />
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Joseph Infante",
+        "jobTitle": "Software Developer",
+        "url": "https://josephi.dev/",
+        "sameAs": ["https://github.com/josephinfante"]
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
